tests/ui/issues/issue-50585.rs
fn main() {
    |y: Vec<[(); for x in 0..2 {}]>| {};
    //~^ ERROR mismatched types
}
